--- a/web.cyberminer/pom.xml
+++ b/web.cyberminer/pom.xml
@@ -45,6 +45,12 @@
 		  <artifactId>solr-solrj</artifactId>
 		  <version>${solrj.version}</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>com.thetransactioncompany</groupId>
+		  <artifactId>cors-filter</artifactId>
+		  <version>2.4</version>
+		</dependency>
     
   </dependencies>
 
