--- a/web.cyberminer/src/main/webapp/WEB-INF/web.xml
+++ b/web.cyberminer/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
   
 	<filter>
 	  <filter-name>CorsFilter</filter-name>
-	  <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+	  <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
 	  <init-param>
 	    <param-name>cors.allowed.origins</param-name>
 	    <param-value>*</param-value>
