--- a/web.cyberminer/src/main/webapp/WEB-INF/web.xml
+++ b/web.cyberminer/src/main/webapp/WEB-INF/web.xml
@@ -37,28 +37,12 @@
 	  <filter-name>CorsFilter</filter-name>
 	  <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
 	  <init-param>
-	    <param-name>cors.allowed.origins</param-name>
+	    <param-name>cors.allowOrigin</param-name>
 	    <param-value>*</param-value>
 	  </init-param>
 	  <init-param>
-	    <param-name>cors.allowed.methods</param-name>
+	    <param-name>cors.supportedMethods</param-name>
 	    <param-value>GET,POST,PUT,DELETE,HEAD,OPTIONS,PUT</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.allowed.headers</param-name>
-	    <param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.exposed.headers</param-name>
-	    <param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.support.credentials</param-name>
-	    <param-value>true</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.preflight.maxage</param-name>
-	    <param-value>10</param-value>
 	  </init-param>
 	</filter>
 	<filter-mapping>
