#noissue * added commons.httpclient

--- a/web.cyberminer/pom.xml
+++ b/web.cyberminer/pom.xml
@@ -51,6 +51,13 @@
 		  <artifactId>cors-filter</artifactId>
 		  <version>2.4</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>commons-httpclient</groupId>
+		  <artifactId>commons-httpclient</artifactId>
+		  <version>3.1</version>
+		</dependency>
+		
     
   </dependencies>
 
