--- a/web.cyberminer/pom.xml
+++ b/web.cyberminer/pom.xml
@@ -41,6 +41,12 @@
     </dependency>
     
     <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    
+    <dependency>
 		  <groupId>org.apache.solr</groupId>
 		  <artifactId>solr-solrj</artifactId>
 		  <version>${solrj.version}</version>
@@ -58,6 +64,17 @@
 		  <version>3.1</version>
 		</dependency>
 		
+		<dependency>
+		  <groupId>com.fasterxml.jackson.core</groupId>
+		  <artifactId>jackson-databind</artifactId>
+		  <version>2.6.3</version>
+		</dependency>
+    
+    <dependency>
+		  <groupId>javax.servlet</groupId>
+		  <artifactId>javax.servlet-api</artifactId>
+		  <version>3.1.0</version>
+		</dependency>
     
   </dependencies>
 
